--- a/fe/package.json
+++ b/fe/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "flowbite": "^1.6.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
