--- a/fe/package.json
+++ b/fe/package.json
@@ -8,33 +8,48 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "TZ=UTC vitest run --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "cross-fetch": "^3.1.6",
     "flowbite": "^1.6.5",
+    "jsdom": "^22.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/whatwg-fetch": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/coverage-c8": "^0.31.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "msw": "^1.1.1",
     "postcss": "^8.4.23",
     "prettier": "^2.3.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-checker": "^0.6.0",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
